# ChatGPT-Wrapper

./: Dockerfile  README.md  debug_cmd.sh  docker-compose.yml  install.bat  main.py  pyproject.toml  todo
.github/workflows/: black-check.yml
app/: main.py  slack_handler.py
app/selenium/: scraper.py
app/slack/: bot.py
utils/: time.py
